--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ p {
 /* Header */
 
 header {
-  background: url(/img/main-bg.jpg) no-repeat center center/cover;
+  background: url(img/main-bg.jpg) no-repeat center center/cover;
   height: 100vh;
   width: 100%;
   position: relative;
