--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ header:before {
   top: 0;
   height: 100%;
   width: 100%;
+  padding: 25vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -146,18 +147,6 @@ header:before {
 
 .arrow:hover {
   transform: scale(1.1, 1.1);
-}
-
-span {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  color: #d0d3d4;
-  opacity: 30%;
-}
-
-span a {
-  color: #d0d3d4;
 }
 
 /* Section */
@@ -207,8 +196,128 @@ span a {
   transition: all 0.4s ease;
   background-color: rgba(247, 220, 111, 0.9);
 }
+
 .card:hover .btn-card {
   display: block;
   opacity: 1;
   transition: opacity 0.4s ease;
+}
+
+/* Footer */
+footer {
+  background-color: #313131;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px 40px;
+}
+
+.footer-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.footer-left {
+  display: flex;
+  flex-direction: column;
+}
+
+h3 {
+  color: var(--text-light);
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.btn-footer {
+  text-decoration: none;
+  color: rgb(121, 135, 221, 0.9);
+  font-size: 18px;
+  border: 2px solid rgb(121, 135, 221, 0.9);
+  border-radius: 5px;
+  width: fit-content;
+  padding: 10px 20px;
+}
+
+.gh-footer {
+  color: var(--btn);
+  border: 2px solid transparent;
+  border-radius: 50px;
+  padding: 5px;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+
+.gh-footer:hover {
+  border: 2px solid var(--btn);
+}
+
+span {
+  color: #d0d3d4;
+  opacity: 30%;
+  align-self: flex-end;
+  font-size: 14px;
+}
+
+span a {
+  color: #d0d3d4;
+}
+
+/* Tablet & Mobile */
+
+@media (max-width: 1050px) {
+  h2 {
+    font-size: 16px;
+  }
+  .arrow {
+    bottom: 70px;
+  }
+  .header-content {
+    padding: 20vw;
+  }
+}
+@media (max-width: 800px) {
+  #projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .header-content {
+    padding: 13vw;
+  }
+}
+@media (max-width: 700px) {
+  #projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  span {
+    margin-top: 20px;
+    align-self: flex-start;
+  }
+}
+@media (max-width: 500px) {
+  h1 {
+    font-size: 28px;
+    padding: 0 15vw;
+  }
+  p,
+  .btn {
+    font-size: 18px;
+  }
+  #projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .header-content {
+    padding: 10vw;
+  }
+  footer {
+    padding: 25px 20px;
+  }
+  span {
+    margin-top: 20px;
+    align-self: flex-start;
+  }
 }
